--- a/app.yaml
+++ b/app.yaml
@@ -4,6 +4,6 @@ handlers:
   static_files: build/\1
   upload: build/(.*\..+)$
 
-- url:
+- url: /.*
   static_files: build/index.html
   upload: build/index.html
